handling some errors

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -2,16 +2,19 @@ server
 	host: 0.0.0.0
 	port: 8080 8081 8082 8083
 
-
+	location
 		methods: POST GET DELETE
 		root: /tmp/www/dir
 		autoindex: on
 		default_file: index.html
 		cgi_extension: php py
+
+
+
+
 	server_names: example.com example1.com example2.com
 	redirect: old-path new-path 301
 	server_root: /
-
 	error_page 404 /errors/404.html
 	error_page 405 /errors/405.html
 	error_page 406 /errors/405.html
