--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -1,40 +1,43 @@
+global root  /home/afanidi/MAIN_webserv/docs/
+
 server
-	host: 0.0.0.0
-	port: 8080 8081 8082 8083
-
-	location
-		methods: POST GET DELETE
-		root: /tmp/www/dir
-		autoindex: on
-		default_file: index.html
-		cgi_extension: php py
-
-
-
-
-	server_names: example.com example1.com example2.com
-	redirect: old-path new-path 301
-	server_root: /
+	host: 0.0.0.0 // check getaddrinfo
+	port: 8080 8081 8082 8083 // check negative and reservd ports
+	server_names: example.com example1.com example2.com // needs root permissions
 	error_page 404 /errors/404.html
 	error_page 405 /errors/405.html
 	error_page 406 /errors/405.html
 	error_page 407 /errors/405.html
+	redirect: old-path new-path 301 //error
+	
+	location /dir/ // check using stat
+		methods: POST GET DELETE
+		root: /tmp/www/ 
+		autoindex: on // should be only on a directory
+		default_file: index.html // should be only on a directory
+		redirect: new-path 301  // path 3xx
+
+	location /
+		methods: POST GET
+
 	location /script
 		methods: POST GET 
-		cgi_extension: php py bash
+		cgi_extension: php py 
 
 	location /uploads
 		methods: POST DELETE
 		root: /tmp/www/dir
 		autoindex: off
+		default_file: upload-form.html //...
 
 
 
 server
-	location /uploadsss
+	location /uploads                                                            
 		methods: POST GET
 		root: /tmp/www/dir
 		autoindex: on
+	
 	host: 122.0.0.0
 	port: 8080 6060
 	server_names: example.com example23.com
@@ -58,16 +61,19 @@ server
 	server_names: example.com example23.com
 	error_page 408 /errors/404.html
 	error_page 409 /errors/405.html
+
 	location /uploads
 		methods: POST
 		root: /tmp/www/dir
 		autoindex: off
+
 	client_body_size: 210M
 	redirect: old-path new-path 301
-
 
 	location /sources
 		methods: POST GET DELETE
 		root: /tmp/www/dir/hehehe
 		autoindex: off
 		default_file: index.html
+
+
