--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -1,5 +1,6 @@
 
 server
+
     host: 127.0.0.3
     port: 8080 8081 8082 8083
 
@@ -9,9 +10,10 @@ server
         autoindex: on
         default_file: index.html
         cgi_extension: php py
+        redirect: new-path 301
+
 
     server_names: example.com example1.com example2.com
-    redirect: old-path new-path 301
     server_root: /
     error_page 404 /errors/404.html
     error_page 405 /errors/405.html
@@ -37,7 +39,6 @@ server
     error_page 408 /errors/404.html
     error_page 409 /errors/405.html
     client_body_size: 10M
-    redirect: old-path new-path 301
 
     location /uploadsss
         methods: POST GET
@@ -60,7 +61,6 @@ server
     error_page 408 /errors/404.html
     error_page 409 /errors/405.html
     client_body_size: 210M
-    redirect: old-path new-path 301
 
     location /uploads
         methods: POST
