--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -1,8 +1,8 @@
 
 server
 
-    host: 127.0.0.1
-    port: 8081 4000
+    host: 127.0.0.3
+    port: 8080 8081 8082 8083
 
     location /
         methods: POST GET DELETE
@@ -28,6 +28,4 @@ server
         methods: POST DELETE
         root: /tmp/www/dir
         autoindex: off
-
-
 
