add process request

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -21,7 +21,7 @@ server
 	location /
 		methods: POST GET
 
-	location /script
+	location /script/
 		methods: POST GET 
 		cgi_extension: php py 
 
