parsing the values

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -1,8 +1,8 @@
 server
 
-    host: 127.0.0.1
+    host: 127.0.0.1 
     port: 8080 8081 8082 8083
-
+    client_body_size: 10g
     location /
         methods: POST GET DELETE
         root: /tmp/www/dir
@@ -16,8 +16,8 @@ server
     server_root: /
     error_page 404 /errors/404.html
     error_page 405 /errors/405.html
-    error_page 406 /errors/406.html
-    error_page 407 /errors/407.html
+    error_page 403 /errors/406.html
+    error_page 505 /errors/407.html
 
     location /script
         methods: POST GET
