--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -3,7 +3,7 @@ server
     host: 127.0.0.1 
     port: 8080 8081 8082 8083
     client_body_size: 10g
-    location /
+    location: /
         methods: POST GET DELETE
         root: /tmp/www/dir
         autoindex: on
@@ -14,16 +14,16 @@ server
 
     server_names: example.com example1.com example2.com
     server_root: /
-    error_page 404 /errors/404.html
-    error_page 405 /errors/405.html
-    error_page 403 /errors/406.html
-    error_page 505 /errors/407.html
+    error_page: 404 /errors/404.html
+    error_page: 405 /errors/405.html
+    error_page: 403 /errors/406.html
+    error_page: 505 /errors/407.html
 
-    location /script
+    location: /script
         methods: POST GET
         cgi_extension: php py bash
 
-    location /uploads
+    location: /uploads
         methods: POST DELETE
         root: /tmp/www/dir
         autoindex: off
