--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -1,4 +1,8 @@
 server
+    location: /uploads/
+        methods: POST DELETE
+        root: /tmp/www/dir
+        autoindex: off
 
     host: 127.0.0.1 
     port: 8080 8081 8082 8083
@@ -10,6 +14,7 @@ server
         default_file: index.html
         cgi_extension: php py
         redirect: new-path 301
+        upload_dir: /pathofuploads
 
 
     server_names: example.com example1.com example2.com
@@ -22,8 +27,33 @@ server
     location: /script
         methods: POST GET
         cgi_extension: php py bash
-
+server
     location: /uploads
         methods: POST DELETE
         root: /tmp/www/dir
         autoindex: off
+
+    host: 127.0.0.1 
+    port: 8082   8084 8080 8083 7070    
+
+    client_body_size: 10g
+    location: /
+        methods: POST GET DELETE
+        root: /tmp/www/dir
+        autoindex: on
+        default_file: index.html
+        cgi_extension: php py
+        redirect: new-path 301
+        upload_dir: /pathofuploads
+
+
+    server_names: example.com example1.com example2.com
+    server_root: /
+    error_page: 404 /errors/404.html
+    error_page: 405 /errors/405.html
+    error_page: 403 /errors/406.html
+    error_page: 505 /errors/407.html
+
+    location: /script
+        methods: POST GET
+        cgi_extension: php py bash
