add cases in response

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -6,8 +6,9 @@ server
         autoindex: off
 
     host: 127.0.0.1 
-    port: 8080
+    port: 8080 9000
     client_body_size: 10g
+    
     location: /
         methods: POST GET DELETE
         root: /tmp/www/dir
