--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -1,14 +1,22 @@
 
-server
-    location: /uploads/
-        methods: POST DELETE
-        root: /tmp/www/dir
-        autoindex: off
 
-    host: 127.0.0.1 
+
+server
+
+    host: 127.0.0.1                            
     port: 8080
-    client_body_size: 10g
-    location: /
+    port: 8081
+    client_body_size: 10m
+    server_names: example.com example1.com example2.com
+    server_root: /
+    error_page: 404 /errors/404.html 
+    error_page: 405 /errors/405.html
+    error_page: 403 /errors/406.html
+    error_page: 505 /errors/407.html 
+    location: /uploads/
+        autoindex: off
+        methods: POST DELETE
+    location: /     
         methods: POST GET DELETE
         root: /tmp/www/dir
         autoindex: on
@@ -17,17 +25,8 @@ server
         redirect: new-path 301
         upload_dir: /pathofuploads
 
-
-    server_names: example.com example1.com example2.com
-    server_root: /
-    error_page: 404 /errors/404.html
-    error_page: 405 /errors/405.html
-    error_page: 403 /errors/406.html
-    error_page: 505 /errors/407.html
-
     location: /script
         methods: POST GET
         cgi_extension: php py bash
-
 
 
