I fixed the EPOLLOUT trigger event

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -1,7 +1,7 @@
 
 server
     location: /uploads/
-        methods: POST DELETE
+        methods: POST DELETE GET
         root: /tmp/www/dir
         autoindex: off
 
