--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -1,33 +1,25 @@
+
 server
-    location: /uploads/
-        methods: POST DELETE GET
-        root: /tmp/www/dir
-        autoindex: off
 
     host: 127.0.0.1 
     port: 8080 9000
-    client_body_size: 10m
-    
-    location: /
-        methods: POST GET DELETE
-        root: /tmp/www/dir
-        autoindex: on
-        default_file: index.html
-        cgi_extension: php py
-        redirect: new-path 301
-        upload_dir: /pathofuploads
-
 
     server_names: example.com example1.com example2.com
     server_root: /
-    error_page: 404 /errors/404.html
-    error_page: 405 /errors/405.html
-    error_page: 403 /errors/406.html
-    error_page: 505 /errors/407.html
+    error_page: 404 /www/html/errorPages/404.html
+    error_page: 405 /www/html/errorPages/405.html
+    error_page: 403 /www/html/errorPages/406.html
+    error_page: 505 /www/html/errorPages/407.html
 
-    location: /script
+    location: /uploads/
+        methods: POST DELETE GET
+        root: /www/html/uploads
+        autoindex: off
+
+
+
+    location: /script/
+        root: /www/html/cgi/
+        default_file: default.php
         methods: POST GET
-        cgi_extension: php py bash
-
-
-
+        cgi_extension: php py
