--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -1,25 +1,36 @@
 
 server
-
     host: 127.0.0.1 
-    port: 8080 9000
+    port: 7070
 
     server_names: example.com example1.com example2.com
     server_root: /
+    error_page: 400 /www/html/errorPages/400.html
+    error_page: 403 /www/html/errorPages/403.html
     error_page: 404 /www/html/errorPages/404.html
     error_page: 405 /www/html/errorPages/405.html
-    error_page: 403 /www/html/errorPages/406.html
-    error_page: 505 /www/html/errorPages/407.html
+    error_page: 500 /www/html/errorPages/500.html
+    error_page: 505 /www/html/errorPages/505.html
+    client_body_size: 10m
+
+    location: /
+        methods: POST GET DELETE
+        root: /www/html
+        autoindex: on
+        default_file: index.html
+        redirect: /redirection/newindex.html 301
 
     location: /uploads/
         methods: POST DELETE GET
-        root: /www/html/uploads
-        autoindex: off
-
-
+        root: /www/html
+        autoindex: on
 
     location: /script/
-        root: /www/html/cgi/
+        root: /www/html/cgi
         default_file: default.php
         methods: POST GET
-        cgi_extension: php py
+        cgi_extension: php py bash
+    
+    location: /folder/file.html
+        root: /www/html
+        methods: GET
