--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -15,22 +15,22 @@ server
 
     location: /
         methods: POST GET DELETE
-        root: /www/html
+        root: www
         autoindex: on
         default_file: index.html
         redirect: /redirection/newindex.html 301
 
     location: /uploads/
-        methods: POST DELETE GET
-        root: /www/html
+        methods: POST GET
+        root: ds
         autoindex: on
 
     location: /script/
-        root: /www/html/cgi
+        root: www/html/cgi
         default_file: default.php
         methods: POST GET
         cgi_extension: php py bash
     
     location: /folder/file.html
-        root: /www/html
+        root: www/html
         methods: GET
