need add sizebuffer in response

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -15,18 +15,18 @@ server
 
     location: /
         methods: POST GET DELETE
-        root: www
+        root: www/
         autoindex: on
         default_file: index.html
-        redirect: /redirection/newindex.html 301
+        
 
     location: /uploads/
         methods: POST GET
-        root: ds
+        root: /www/uploads/
         autoindex: on
 
     location: /script/
-        root: www/html/cgi
+        root: www/cgi
         default_file: default.php
         methods: POST GET
         cgi_extension: php py bash
@@ -34,3 +34,4 @@ server
     location: /folder/file.html
         root: www/html
         methods: GET
+        redirect: /redirection/newindex.html 301
