handleProcessUri_Method fixed. problem of Prefix matching

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -25,12 +25,12 @@ server
         root: ds
         autoindex: on
 
-    location: /script/
+    location: script/
         root: www/html/cgi
         default_file: default.php
         methods: POST GET
         cgi_extension: php py bash
     
-    location: /folder/file.html
+    location: folder/file.html
         root: www/html
         methods: GET
