need configure isdir in pasring config file

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -1,36 +1,34 @@
 server
     host: 127.0.0.1 
-    port: 7070
+    port: 2020
 
     server_names: example.com example1.com example2.com
     server_root: /
-    error_page: 400 /www/html/errorPages/400.html
-    error_page: 403 /www/html/errorPages/403.html
-    error_page: 404 /www/html/errorPages/404.html
-    error_page: 405 /www/html/errorPages/405.html
-    error_page: 500 /www/html/errorPages/500.html
-    error_page: 505 /www/html/errorPages/505.html
+    error_page: 400 www/html/errorPages/400.html
+    error_page: 403 www/html/errorPages/403.html
+    error_page: 404 www/html/errorPages/404.html
+    error_page: 405 www/html/errorPages/405.html
+    error_page: 500 www/html/errorPages/500.html
+    error_page: 505 www/html/errorPages/505.html
     client_body_size: 10m
 
     location: /
-        methods: POST GET DELETE
-        root: www/
-        autoindex: on
+        methods: GET
+        root: /www/html
         default_file: index.html
-        
 
-    location: /uploads/
+    location: /upload/upload.html
         methods: POST GET
-        root: /www/uploads/
-        autoindex: on
+        root: /www/html/uploads/upload.html
 
-    location: /script/
+    location: /script
         root: www/cgi
         default_file: default.php
         methods: POST GET
         cgi_extension: php py bash
     
-    location: /folder/file.html
-        root: www/html
+    location: /4654hjvuhjb
+        root: /www/html
+        default_file: defualt.html
         methods: GET
         redirect: /redirection/newindex.html 301
