--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -3,7 +3,6 @@ server
     port: 2020
 
     server_names: example.com example1.com example2.com
-    server_root: /
     error_page: 400 www/html/errorPages/400.html
     error_page: 403 www/html/errorPages/403.html
     error_page: 404 www/html/errorPages/404.html
@@ -22,8 +21,8 @@ server
         root: /www/html/uploads/upload.html
 
     location: /script
-        root: www/cgi
-        default_file: default.php
+        root: /www/cgi
+        default_file: DefaultCgiTimeout.html
         methods: POST GET
         cgi_extension: php py bash
     
