probleam solved : need to re-register epollout when have chuncking responsegit commit -m

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -16,9 +16,10 @@ server
         root: /www/html
         default_file: index.html
 
-    location: /upload/upload.html
+    location: /upload
         methods: POST GET
-        root: /www/html/uploads/upload.html
+        root: /www/html/uploads
+        default_file: upload.html
 
     location: /script
         root: /www/cgi
@@ -26,7 +27,7 @@ server
         methods: POST GET
         cgi_extension: php py bash
     
-    location: /4654hjvuhjb
+    location: /hh
         root: /www/html
         default_file: defualt.html
         methods: GET
