fix  problem pages

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -23,7 +23,7 @@ server
 
     location: /script
         root: /www/cgi
-        default_file: DefaultCgiTimeout.html
+        default_file: cgi-default.html
         methods: POST GET
         cgi_extension: php py bash
     
