add condition accorded with config file

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -1,6 +1,37 @@
 server
     host: 127.0.0.1 
-    port: 2020
+    port: 2020 4040
+
+    server_names: example.com example1.com example2.com
+    error_page: 400 www/html/errorPages/400.html
+    error_page: 403 www/html/errorPages/403.html
+    error_page: 404 www/html/errorPages/404.html
+    error_page: 405 www/html/errorPages/405.html
+    error_page: 500 www/html/errorPages/500.html
+    error_page: 505 www/html/errorPages/505.html
+    client_body_size: 10m
+
+    location: /
+        methods: POST
+        root: /www/html
+        autoindex: on
+
+    location: /upload
+        methods: POST GET
+        root: /www/html/uploads
+        default_file: upload.html
+
+    
+    location: /hh
+        root: /www/html
+        default_file: defualt.html
+        methods: GET
+        redirect: /redirection/newindex.html 301
+
+
+server
+    host: 127.0.0.1
+    port: 4040
 
     server_names: example.com example1.com example2.com
     error_page: 400 www/html/errorPages/400.html
@@ -14,21 +45,10 @@ server
     location: /
         methods: GET
         root: /www/html
-        default_file: index.html
-
-    location: /upload
-        methods: POST GET
-        root: /www/html/uploads
-        default_file: upload.html
+        autoindex: on
 
     location: /script
         root: /www/cgi
         default_file: cgi-default.html
         methods: POST GET
         cgi_extension: php py bash
-    
-    location: /hh
-        root: /www/html
-        default_file: defualt.html
-        methods: GET
-        redirect: /redirection/newindex.html 301
