add host and port in env

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -12,7 +12,7 @@ server
     client_body_size: 10m
 
     location: /
-        methods: POST
+        methods: GET POST
         root: /www/html
         autoindex: on
 
@@ -21,7 +21,12 @@ server
         root: /www/html/uploads
         default_file: upload.html
 
-    
+    location: /script
+        root: /www/cgi
+        default_file: scriptdefault.php
+        methods: POST GET
+        cgi_extension: .php .py
+
     location: /hh
         root: /www/html
         default_file: defualt.html
@@ -46,9 +51,3 @@ server
         methods: GET
         root: /www/html
         autoindex: on
-
-    location: /script
-        root: /www/cgi
-        default_file: cgi-default.html
-        methods: POST GET
-        cgi_extension: php py bash
