--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -15,6 +15,7 @@ server
         methods: GET POST
         root: /www/html
         autoindex: on
+        default_file: index.html
 
     location: /upload
         methods: POST GET
@@ -45,7 +46,7 @@ server
     error_page: 405 www/html/errorPages/405.html
     error_page: 500 www/html/errorPages/500.html
     error_page: 505 www/html/errorPages/505.html
-    client_body_size: 10m
+    client_body_size: 10
 
     location: /
         methods: GET
