update the cgi extension from set to map

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -9,7 +9,7 @@ server
     error_page: 405 www/html/errorPages/405.html
     error_page: 500 www/html/errorPages/500.html
     error_page: 505 www/html/errorPages/505.html
-    client_body_size: 10m
+    client_body_size: 10
 
     location: /
         methods: GET
@@ -24,7 +24,9 @@ server
         root: /www/cgi
         default_file: DefaultCgiTimeout.html
         methods: POST GET
-        cgi_extension: php py bash
+        cgi_extension: .php /path/
+        cgi_extension: .py /path/
+        
     
     location: /4654hjvuhjb
         root: /www/html
