--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -25,7 +25,9 @@ server
         root: /www/cgi
         default_file: scriptdefault.php
         methods: POST GET
-        cgi_extension: .php .py
+        cgi_extension: .php /path/1
+        cgi_extension: .py /path/2
+        
 
     location: /hh
         root: /www/html
@@ -45,9 +47,8 @@ server
     error_page: 405 www/html/errorPages/405.html
     error_page: 500 www/html/errorPages/500.html
     error_page: 505 www/html/errorPages/505.html
-    client_body_size: 10m
+    client_body_size: 10
 
     location: /
         methods: GET
         root: /www/html
-        autoindex: on
