--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,7 +73,11 @@
     "variant": "cpp",
     "compare": "cpp",
     "concepts": "cpp",
-    "*.tcc": "cpp"
+    "*.tcc": "cpp",
+    "memory_resource": "cpp",
+    "numeric": "cpp",
+    "random": "cpp",
+    "numbers": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
