fix error status

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -28,11 +28,10 @@ server
         methods: POST GET
         cgi_extension: .php .py
 
-    location: /hh
-        root: /www/html
-        default_file: defualt.html
-        methods: GET
-        redirect: /redirection/newindex.html 301
+    location: /form
+        root: /www/html/form
+        default_file: form.html
+        methods: POST GET
 
 
 server
