--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -28,6 +28,7 @@ server
         methods: POST GET
         cgi_extension: .php /usr/bin/php-cgi
         cgi_extension: .py /usr/bin/python3
+        cgi_extension: .bash /usr/bin/bash
 
     location: /form
         root: /www/html/form
