response simple done

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -15,11 +15,10 @@ server
         methods: GET POST
         root: /www/html
         autoindex: on
-        default_file: index.html
 
     location: /upload
         methods: POST GET
-        root: /www/html/uploads
+        root: /www/html/upload
         default_file: upload.html
 
     location: /script
