--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -8,13 +8,16 @@ server
     error_page: 404 www/html/errorPages/404.html
     error_page: 405 www/html/errorPages/405.html
     error_page: 500 www/html/errorPages/500.html
+    error_page: 504 www/cgi/timeout.html
     error_page: 505 www/html/errorPages/505.html
+
     client_body_size: 10
 
     location: /
         methods: GET POST
         root: /www/html
         autoindex: on
+        default_file: index.html
 
     location: /upload
         methods: POST GET
@@ -29,10 +32,14 @@ server
         cgi_extension: .py /usr/bin/python3
         cgi_extension: .bash /usr/bin/bash
 
-    location: /form
-        root: /www/html/form
-        default_file: form.html
+    location: /session
+        root: /www/html/session
+        default_file: login.html
         methods: POST GET
+    location: /test
+        root: /www/cgi
+        methods: POST GET
+        default_file: timeout.html
 
 
 server
