session management added

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -34,8 +34,9 @@ server
 
     location: /session
         root: /www/html/session
-        default_file: login.html
+        default_file: session.html
         methods: POST GET
+
     location: /test
         root: /www/cgi
         methods: POST GET
