set 500 405 status code , add server name

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -2,7 +2,7 @@ server
     host: 127.0.0.1 
     port: 2020 4040
 
-    server_names: example.com example1.com example2.com
+    server_names:  example.com example1.com example2.com
     error_page: 400 www/html/errorPages/400.html
     error_page: 403 www/html/errorPages/403.html
     error_page: 404 www/html/errorPages/404.html
@@ -17,20 +17,20 @@ server
         methods: GET POST
         root: /www/html
         autoindex: on
-        default_file: index.html
+
 
     location: /upload
         methods: POST GET
         root: /www/html/upload
-        default_file: upload.html
+        autoindex: on
 
     location: /script
         root: /www/cgi
-        default_file: scriptdefault.php
         methods: POST GET
         cgi_extension: .php /usr/bin/php-cgi
         cgi_extension: .py /usr/bin/python3
         cgi_extension: .bash /usr/bin/bash
+        autoindex: on
 
     location: /session
         root: /www/html/session
