--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -40,7 +40,7 @@ server
     location: /test
         root: /www/cgi
         methods: POST GET
-        default_file: timeout.html
+        autoindex: on
 
 
 server
