fix chunked and delete

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -20,7 +20,7 @@ server
 
 
     location: /upload
-        methods: POST GET
+        methods: POST GET DELETE
         root: /www/html/upload
         autoindex: on
 
@@ -35,7 +35,7 @@ server
     location: /session
         root: /www/html/session
         default_file: session.html
-        methods: POST GET
+        methods: POST GET DELETE
 
     location: /test
         root: /www/cgi
