--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -16,8 +16,7 @@ server
     location: /
         methods: GET POST
         root: /www/html
-        autoindex: on
-
+        redirect: /dsd 301
 
     location: /upload
         methods: POST GET DELETE
@@ -39,5 +38,5 @@ server
 
     location: /test
         root: /www/cgi
-        methods: POST GET
+        methods: POST GET DELETE
         autoindex: on
