--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -16,12 +16,12 @@ server
     location: /
         methods: GET POST
         root: /www/html
-        redirect: /dsd 301
+        default_file: index.html
 
-    location: /upload
+    location: /submit
         methods: POST GET DELETE
-        root: /www/html/upload
-        autoindex: on
+        root: /www/html/submit
+        default_file: form.html
 
     location: /script
         root: /www/cgi
@@ -40,3 +40,4 @@ server
         root: /www/cgi
         methods: POST GET DELETE
         autoindex: on
+        redirect: /submit  307
