--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -1,6 +1,6 @@
 server
     host: 127.0.0.1 
-    port: 2020 4040
+    port:  2020
 
     server_names:  example.com example1.com example2.com
     error_page: 400 www/html/errorPages/400.html
@@ -16,17 +16,16 @@ server
     location: /
         methods: GET POST
         root: /www/html
-        autoindex: on
+        default_file: index.html
 
-
-    location: /upload
-        methods: POST GET
-        root: /www/html/upload
-        autoindex: on
+    location: /submit
+        methods: POST GET DELETE
+        root: /www/html/submit
+        default_file: form.html
 
     location: /script
         root: /www/cgi
-        methods: POST GET
+        methods: POST GET 
         cgi_extension: .php /usr/bin/php-cgi
         cgi_extension: .py /usr/bin/python3
         cgi_extension: .bash /usr/bin/bash
@@ -35,28 +34,10 @@ server
     location: /session
         root: /www/html/session
         default_file: session.html
-        methods: POST GET
+        methods: POST GET 
 
     location: /test
         root: /www/cgi
-        methods: POST GET
-        default_file: timeout.html
-
-
-server
-    host: 127.0.0.1
-    port: 4040
-
-    server_names: example.com example1.com example2.com
-    error_page: 400 www/html/errorPages/400.html
-    error_page: 403 www/html/errorPages/403.html
-    error_page: 404 www/html/errorPages/404.html
-    error_page: 405 www/html/errorPages/405.html
-    error_page: 500 www/html/errorPages/500.html
-    error_page: 505 www/html/errorPages/505.html
-    client_body_size: 10
-
-    location: /
-        methods: GET
-        root: /www/html
+        methods: POST GET DELETE
         autoindex: on
+        redirect: /submit  307
