done final version

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -33,7 +33,7 @@ server
 
     location: /session
         root: /www/html/session
-        default_file: session.html
+        autoindex: on
         methods: POST GET 
 
     location: /test
