fix redirection in request

--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -11,17 +11,21 @@ server
     error_page: 504 www/cgi/timeout.html
     error_page: 505 www/html/errorPages/505.html
 
-    client_body_size: 10
+    client_body_size: 100
 
     location: /
-        methods: GET POST
+        methods: POST
         root: /www/html
         default_file: index.html
+        redirect: /submit 307
+        
 
     location: /submit
-        methods: POST GET DELETE
+        methods: POST GET 
         root: /www/html/submit
         default_file: form.html
+        
+        
 
     location: /script
         root: /www/cgi
@@ -33,11 +37,11 @@ server
 
     location: /session
         root: /www/html/session
-        autoindex: on
+        default_file: session.html
         methods: POST GET 
 
     location: /test
         root: /www/cgi
         methods: POST GET DELETE
         autoindex: on
-        redirect: /submit  307
+        redirect: /session  307
