--- a/configFiles/default.config
+++ b/configFiles/default.config
@@ -11,21 +11,17 @@ server
     error_page: 504 www/cgi/timeout.html
     error_page: 505 www/html/errorPages/505.html
 
-    client_body_size: 100
+    client_body_size: 10
 
     location: /
-        methods: POST
+        methods: GET POST
         root: /www/html
         default_file: index.html
-        redirect: /submit 307
-        
 
     location: /submit
-        methods: POST GET 
+        methods: POST GET DELETE
         root: /www/html/submit
         default_file: form.html
-        
-        
 
     location: /script
         root: /www/cgi
@@ -37,11 +33,11 @@ server
 
     location: /session
         root: /www/html/session
-        default_file: session.html
+        autoindex: on
         methods: POST GET 
 
     location: /test
         root: /www/cgi
         methods: POST GET DELETE
         autoindex: on
-        redirect: /session  307
+        redirect: /submit  307
